--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
+    "@tanstack/react-query": "^4.29.25",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "antd": "^5.6.3",
+    "axios": "^1.4.0",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
